--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue,.ts src"
+    "lint": "eslint --ext .js,.vue,.ts src",
+    "deploy": "node scripts/gh-pages-deploy.mjs"
   },
   "dependencies": {
     "path": "^0.12.7",
@@ -23,6 +24,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^9.8.0",
+    "execa": "^6.1.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
