--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue,.ts src",
+    "test": "vitest",
     "deploy": "node scripts/gh-pages-deploy.mjs"
   },
   "dependencies": {
@@ -15,9 +16,11 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@types/node": "^18.11.13",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.2.6",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -25,8 +28,10 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^9.8.0",
     "execa": "^6.1.0",
+    "jsdom": "^20.0.3",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
+    "vitest": "^0.25.7",
     "vue-tsc": "^1.0.12"
   }
 }
