--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: 16
       - name: Install packages
         run: npm i
+      - name: Test packages
+        run: npm run test:unit
       - name: Set Creds
         run: git config user.name "Mark" && git config user.email "${{ secrets.EMAIL }}"
       - name: Deploy
