--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue,.ts src",
     "test": "vitest",
+    "test:unit": "vitest run",
+    "coverage": "vitest run --coverage",
     "deploy": "node scripts/gh-pages-deploy.mjs"
   },
   "dependencies": {
@@ -20,6 +22,7 @@
     "@types/node": "^18.11.13",
     "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-istanbul": "^0.25.8",
     "@vue/test-utils": "^2.2.6",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
