--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-oscilloscope",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "vite",
@@ -14,8 +15,8 @@
     "deploy": "node scripts/gh-pages-deploy.mjs"
   },
   "engines": {
-    "node": ">=18",
-    "pnpm": ">=7"
+    "node": ">=20",
+    "pnpm": ">=8"
   },
   "dependencies": {
     "path": "^0.12.7",
@@ -24,13 +25,13 @@
   },
   "devDependencies": {
     "@pinia/testing": "^0.1.3",
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-vue": "^4.4.1",
+    "@types/node": "^20.9.2",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-istanbul": "^0.34.6",
-    "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.53.0",
+    "@vue/test-utils": "^2.4.2",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -39,7 +40,7 @@
     "execa": "^8.0.1",
     "jsdom": "^22.1.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.22"
   }
