--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue,.ts src",
+    "lint": "eslint src --fix",
     "test": "vitest",
     "test:unit": "vitest run",
     "coverage": "vitest run --coverage",
@@ -23,6 +23,7 @@
     "vue": "^3.4.23"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@pinia/testing": "^0.1.3",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
@@ -39,6 +40,7 @@
     "execa": "^8.0.1",
     "jsdom": "^24.0.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0",
     "vite": "^5.2.10",
     "vitest": "^1.5.0",
     "vue-tsc": "^2.0.13"
